fixed slider-items not showing on phone

--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -36,14 +36,13 @@
 
 .watermark {
   position: absolute;
-  // color: rgba(255, 255, 255, 0.05);
   color: rgba(0, 0, 0, 1);
   top: 45vh;
   left: 0;
   right: 0;
   width: fit-content;
   margin: auto;
-  @include fluid-type($min-font-size: 100px, $max-font-size: 700px);
+  @include fluid-type($min-font-size: 120px, $max-font-size: 700px);
   transform: translate3D(0, -50%, 0);
   // -webkit-text-stroke: 4px rgba(255, 255, 255, 0.08);
   filter: drop-shadow(2px 2px 2px rgba(255, 255, 255, 0.2));
@@ -114,8 +113,6 @@
     border: 10px solid var(--white);
     border-radius: 50%;
     position: absolute;
-    // transition-duration: 100ms;
-    // transition-timing-function: ease-out;
     animation: cursorAnim 1s infinite alternate;
     pointer-events: none;
     opacity: 0;
